@@ -108,12 +108,7 @@ READ_PRA()
 
 READ_PRB()
 {
-#if 0				/* !FAST_BUS */
-        return ((viaD1[VIA_PRB] & viaD1[VIA_DDRB]) | ((serial_bus_drive_read()) & ~viaD1[VIA_DDRB]));
-#else
-	return ((viaD1[VIA_PRB] & 0x1a)
-		| serial_bus_drive_read()) ^ 0x85;
-#endif
+	return ((viaD1[VIA_PRB] & 0x1a) | serial_bus_drive_read()) ^ 0x85;
 }
 
 #define POST_VIA_FUNCS
